--- a/css/styles.css
+++ b/css/styles.css
@@ -188,6 +188,138 @@ background-color: #FFFFFF;}
         
 
 
+       /* PAGE HEADER BLOCK */
+
+ h1, h2, h3, h4, h5, h5, p 
+{margin-top: 0;
+margin-bottom: 0;}
+
+ul, ol {margin-top: 0;
+ margin-bottom: 0;
+ padding-left: 0;}
+
+img {display: block;
+max-width: 100%;
+height: auto;}
+
+.container {
+    width: 1158px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left:15px;
+    padding-right: 15px;}
+
+.page-header{
+    padding-top: 24px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid  #E7E9FC;}
+
+ .page-header-container{display: flex;}
+
+ .top-nav{display: flex;
+        align-items: center;
+        margin-right: auto;}
+
+ .logo{margin-right: 76px;}
+    
+ .list-nav{display:flex;
+           column-gap: 40px;}
+ .link-address{display: flex;
+            column-gap: 40px;
+            align-items: center;}
+
+            /* HERO SECTION 1 */
+
+.hero-section{padding-top: 188px;
+    padding-bottom: 292px;
+    text-align: center;}            
+
+.hero-text{
+    width: 496px;
+    height: 120px;
+    margin-top: 188px;
+    margin-right:auto ;
+    margin-left:auto ;}
+
+.button{
+padding: 16px 32px;
+margin-top: 48px;
+border-radius: 4px;}
+
+/* Section 2 */
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;}
+
+   .information{padding-top: 120px;
+                padding-bottom: 89px;}
+
+.information-list{display: flex;
+column-gap: 24px;}
+
+.link-information-list{width: calc((100% - 72px) / 4);}
+
+/* Section 3  OUR TEAM*/
+
+.our-team {padding-bottom: 120px;}
+
+.list-photo-team{display: flex;
+column-gap: 24px;}
+
+.photo-team{width: calc((100% - 72px) / 4);
+border-radius: 0px 0px 4px 4px;}
+
+.name-section-team{
+padding-top: 120px;
+padding-bottom: 72px;}
+
+.card-employee{padding-top:32px;
+padding-bottom: 32px;}
+
+.info-employee{padding-top: 8px;}
+
+
+/* SECTION 4 Portfolio */
+
+.portfolio-list{padding-bottom: 127px;}
+
+.name-section{padding-top:113px ;
+padding-bottom:72px ;}
+
+.photo-portfolio{width: calc((100% - 48px) / 3 );
+border: 1px solid  #E7E9FC;}
+
+.list-photo-portfolio{display: flex;
+flex-wrap: wrap;
+column-gap: 24px;
+row-gap: 48px;}
+
+.info-port{
+    padding-top: 32px;
+    padding-bottom: 32px;
+    margin-left: 16px;
+    margin-right: 16px;}
+
+.text-portfolio{padding-top: 16px;}
+    
+
+/* FOOTER */
+
+.end-page{padding-top: 101.5px;
+padding-bottom: 100px ;}
+
+.last-text{width: 264px;
+margin-top: 17.5px;}
+
 
 
 
