--- a/css/styles.css
+++ b/css/styles.css
@@ -212,12 +212,12 @@ height: auto;}
 .page-header{ border-bottom: 1px solid  #E7E9FC;}
 
  .page-header-container{display: flex;
-                        align-items: center; 
-                        padding: 24px 0;}
+                        align-items: center; }
 
  .top-nav{display: flex;
         align-items: center;
-        margin-right: auto;}
+        margin-right: auto;
+        padding: 24px 0;}
 
  .logo{margin-right: 76px;}
     
