--- a/css/styles.css
+++ b/css/styles.css
@@ -229,8 +229,7 @@ height: auto;}
 
  .link-address{display: flex;
             gap: 40px;
-            align-items: center;
-            padding: 24px 0;}
+            align-items: center;}
        
 
 
